tests/fixtures/invalid/round_str_bytes.py
# Cannot call round() with Str, Bytes
x = round("hello", b"hello")
